--- a/sourse/index.html
+++ b/sourse/index.html
@@ -6,6 +6,37 @@
     <title>CAT ENERGY</title>
   </head>
   <body class="page__body">
-  
+  <header class="page-header">
+    <a href="index.html" class="page-header__logo">
+      <img src="img/logo-mobile.svg" width="34" height="38" alt="Логотип компании Cat energy">
+      CAT ENERGY
+    </a>
+
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
+        <span>Открыть меню</span>
+      </button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav--current">
+            <a>
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a>
+              Каталог продукции
+            </a>
+          </li>
+          <li class="main-nav__item">
+            <a>
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
   </body>
 </html>
