--- a/sourse/index.html
+++ b/sourse/index.html
@@ -14,7 +14,7 @@
 
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
-        <span>Открыть меню</span>
+        <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
@@ -37,6 +37,18 @@
       </div>
     </nav>
   </header>
+
+  <main class="page-main">
+    <h1 class="visually-hidden"> Сайт магазина "Cat energy"</h1>
+
+    <header class="page-main__header">
+      <div class="promo">
+        <h1 class="promo__title">Функциональное питание для котов</h1>
+        <p class="promo__text">Занялся собой? Займись котом!</p>
+        <a class="promo__button" href="#">Подобрать программу</a>
+      </div>
+    </header>
+  </main>
 
   </body>
 </html>
