Заменила название вкладки

--- a/sourse/index.html
+++ b/sourse/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CAT ENERGY</title>
+    <title>CAT ENERGY: Функциональное питание для котов</title>
   </head>
   <body class="page__body">
   <header class="page-header">
     <a href="index.html" class="page-header__logo">
-      <img src="img/logo-mobile.svg" width="34" height="38" alt="Логотип компании Cat energy">
+      <img src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
       CAT ENERGY
     </a>
 
