Добавила изображение в верстку шапки сайта

--- a/sourse/index.html
+++ b/sourse/index.html
@@ -43,12 +43,13 @@
 
     <header class="page-main__header">
       <div class="promo">
-        <h1 class="promo__title">Функциональное питание для котов</h1>
+        <h1 class="promo__heading">Функциональное питание для котов</h1>
         <p class="promo__text">Занялся собой? Займись котом!</p>
+        <img src="img/index-can-mobile.png" width="280" height="270" alt="Изображение банки куриного корма cat energy">
         <a class="promo__button" href="#">Подобрать программу</a>
       </div>
     </header>
-  </main>
 
+  </main>
   </body>
 </html>
