--- a/sourse/index.html
+++ b/sourse/index.html
@@ -50,6 +50,30 @@
       </div>
     </header>
 
+    <section class="page-main__section catalog">
+      <h2 class="visually-hidden">Разделы каталога</h2>
+          <article class="catalog__item">
+            <h3 class="catalog__heading">
+              Похудение
+            </h3>
+            <p class="catalog__text">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="catalog__link" href="#">Каталог SLIM</a>
+          </article>
+          <article class="catalog__item">
+            <h3 class="catalog__heading">
+              Набор массы
+            </h3>
+            <p class="catalog__text">
+              Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="catalog__link" href="#">Каталог PRO</a>
+          </article>
+    </section>
+
   </main>
   </body>
 </html>
