--- a/sourse/index.html
+++ b/sourse/index.html
@@ -74,6 +74,32 @@
           </article>
     </section>
 
+    <section class="page-main__section process">
+      <h2 class="process__heading">как это работает</h2>
+      <ul class="process__list">
+        <li class="process__item">
+          <p class="process__text">
+            Функциональное питание содержит только полезные питательные вещества.
+          </p>
+        </li>
+        <li class="process__item">
+          <p class="process__text">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </p>
+        </li>
+        <li class="process__item">
+          <p class="process__text">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </p>
+        </li>
+        <li class="process__item">
+          <p class="process__text">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </p>
+        </li>
+      </ul>
+    </section>
+
   </main>
   </body>
 </html>
