--- a/sourse/index.html
+++ b/sourse/index.html
@@ -100,6 +100,42 @@
       </ul>
     </section>
 
+    <section class="page-main__section example">
+      <h2 class="example__heading">Живой пример</h2>
+      <p class="example__text">
+        Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих тренировок!
+        При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+      </p>
+      <dl class="example__list">
+        <dt class="example__title">
+          Снижение веса
+        </dt>
+        <dd class="example__definition">
+          5 кг
+        </dd>
+        <dt class="example__title">
+          Затрачено времени
+        </dt>
+        <dd class="example__definition">
+          60 дней
+        </dd>
+      </dl>
+      <p class="example__spending">
+        Затраты на питание: 15 000 руб.
+      </p>
+      <div class="example__images">
+        <img class="example__image" src="img/example/before-mobile.png" width="280" height="232"
+             alt="Фотография кота до похудения">
+        <img class="example__image" src="img/example/after-mobile.png" width="243" height="232"
+             alt="Фотография кота после похудения">
+      </div>
+      <div class="example__switcher">
+        <button class="switcher__button" type="button">Было</button>
+        <button class="switcher__button" type="button">Стало</button>
+      </div>
+    </section>
+
   </main>
   </body>
 </html>
