--- a/sourse/index.html
+++ b/sourse/index.html
@@ -136,6 +136,18 @@
       </div>
     </section>
 
+    <section  class="page-main__section contacts">
+      <h2 class="visually-hidden"> Контакты компании </h2>
+      <p class="contacts_text">
+        Приглашаем к сотрудничеству дилеров!
+      </p>
+      <p class="contacts_address">
+        ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+      </p>
+      <img src="img/map-mobile.png" width="640" height="724"
+           alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
+    </section>
+
   </main>
   </body>
 </html>
