Раздел с контактной информацией сделала футером

--- a/sourse/index.html
+++ b/sourse/index.html
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <section  class="page-main__section contacts">
+    <footer  class="page-footer contacts">
       <h2 class="visually-hidden"> Контакты компании </h2>
       <p class="contacts_text">
         Приглашаем к сотрудничеству дилеров!
@@ -146,7 +146,7 @@
       </p>
       <img src="img/map-mobile.png" width="640" height="724"
            alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
-    </section>
+    </footer>
 
   </main>
   </body>
