--- a/sourse/index.html
+++ b/sourse/index.html
@@ -149,5 +149,29 @@
     </footer>
 
   </main>
+
+  <footer class="page__footer footer">
+    <a class="footer__logo">
+      <img src="img/logo-mobile.svg" width="34" height="38" alt="Cat energy">
+    </a>
+
+    <ul class="social__list">
+      <li class="social__item">
+        <a class="social__link">
+          <span class="visually-hidden">Вконтакте</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link">
+          <span class="visually-hidden">Instagram</span>
+        </a>
+      </li>
+      <li class="social__item">
+        <a class="social__link">
+          <span class="visually-hidden">Facebook</span>
+        </a>
+      </li>
+    </ul>
+  </footer>
   </body>
 </html>
