Внесла поправки в разметку страницы
В шапке заменила надпись на логотип; добавила к ссылкам атрибут href; заменила иконку в футере; добавила иконку в папку img

--- a/sourse/index.html
+++ b/sourse/index.html
@@ -9,7 +9,7 @@
   <header class="page-header">
     <a href="index.html" class="page-header__logo">
       <img src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
-      CAT ENERGY
+      <img src="img/logo2-mobile.svg" width="101" height="18" alt="Cat energy">
     </a>
 
     <nav class="main-nav">
@@ -19,17 +19,17 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav--current">
-            <a>
+            <a href="#">
               Главная
             </a>
           </li>
           <li class="main-nav__item">
-            <a>
+            <a href="#">
               Каталог продукции
             </a>
           </li>
           <li class="main-nav__item">
-            <a>
+            <a href="#">
               Подбор программы
             </a>
           </li>
@@ -152,22 +152,22 @@
 
   <footer class="page__footer footer">
     <a class="footer__logo">
-      <img src="img/logo-mobile.svg" width="34" height="38" alt="Cat energy">
+      <img src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
     </a>
 
     <ul class="social__list">
       <li class="social__item">
-        <a class="social__link">
+        <a class="social__link" href="#">
           <span class="visually-hidden">Вконтакте</span>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link">
+        <a class="social__link" href="#">
           <span class="visually-hidden">Instagram</span>
         </a>
       </li>
       <li class="social__item">
-        <a class="social__link">
+        <a class="social__link" href="#">
           <span class="visually-hidden">Facebook</span>
         </a>
       </li>
