Откорректировала названия классов в соответствие с БЭМом

--- a/sourse/index.html
+++ b/sourse/index.html
@@ -18,7 +18,7 @@
       </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav--current">
+          <li class="main-nav__item main-nav__item--current">
             <a href="#">
               Главная
             </a>
@@ -130,7 +130,7 @@
         <img class="example__image" src="img/example/after-mobile.png" width="243" height="232"
              alt="Фотография кота после похудения">
       </div>
-      <div class="example__switcher">
+      <div class="example__switcher switcher">
         <button class="switcher__button" type="button">Было</button>
         <button class="switcher__button" type="button">Стало</button>
       </div>
@@ -138,10 +138,10 @@
 
     <footer  class="page-footer contacts">
       <h2 class="visually-hidden"> Контакты компании </h2>
-      <p class="contacts_text">
+      <p class="contacts__text">
         Приглашаем к сотрудничеству дилеров!
       </p>
-      <p class="contacts_address">
+      <p class="contacts__address">
         ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
       </p>
       <img src="img/map-mobile.png" width="640" height="724"
@@ -155,7 +155,7 @@
       <img src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
     </a>
 
-    <ul class="social__list">
+    <ul class="footer__social social">
       <li class="social__item">
         <a class="social__link" href="#">
           <span class="visually-hidden">Вконтакте</span>
