Завершила разметку страницы с формой
Разметка раздела с контактами и футера сайта

--- a/sourse/form.html
+++ b/sourse/form.html
@@ -118,7 +118,43 @@
             </div>
         </form>
     </section>
+
+    <footer class="page-footer contacts">
+        <h2 class="visually-hidden"> Контакты компании </h2>
+        <p class="contacts__text">
+            Приглашаем к сотрудничеству дилеров!
+        </p>
+        <p class="contacts__address">
+            ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+        </p>
+        <img src="img/map-mobile.png" width="640" height="724"
+             alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
+    </footer>
 </main>
+
+<footer class="page__footer footer">
+    <a class="footer__logo">
+        <img src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
+    </a>
+
+    <ul class="footer__social social">
+        <li class="social__item">
+            <a class="social__link" href="#">
+                <span class="visually-hidden">Вконтакте</span>
+            </a>
+        </li>
+        <li class="social__item">
+            <a class="social__link" href="#">
+                <span class="visually-hidden">Instagram</span>
+            </a>
+        </li>
+        <li class="social__item">
+            <a class="social__link" href="#">
+                <span class="visually-hidden">Facebook</span>
+            </a>
+        </li>
+    </ul>
+</footer>
 
 </body>
 </html>
