--- a/sourse/catalog.html
+++ b/sourse/catalog.html
@@ -37,5 +37,276 @@
     </nav>
 </header>
 
+<main class="page-main">
+    <h1 class="page-main__title">Каталог продукции</h1>
+
+    <section class="page-main__section goods">
+        <h2 class="visually-hidden">Список товаров</h2>
+        <ul class="goods__list">
+            <li class="goods__item goods__wrapper">
+                <div class="product">
+                    <img src="img/goods/catalog-1-mobile.png" width="68" height="86"
+                         alt="Cat Energy PRO со вкусом курицы 500 г">
+                    <div class="product__description">
+                        <h3 class="product__heading">Cat Energy PRO 500 г</h3>
+                        <table class="product__table">
+                            <tr>
+                                <td class="product__name">
+                                    Масса
+                                </td>
+                                <td class="product__value">
+                                    500 г
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Вкус
+                                </td>
+                                <td class="product__value">
+                                    Курица
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Цена
+                                </td>
+                                <td class="product__value">
+                                    700 Р
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <a class="button" href="form.html">Заказать</a>
+            </li>
+            <li class="goods__item goods__wrapper">
+                <div class="product">
+                    <img src="img/goods/catalog-2-mobile.png" width="84" height="101"
+                         alt="Cat Energy PRO со вкусом курицы 1000 г">
+                    <div class="product">
+                        <h3 class="product__heading">Cat Energy PRO 1000 г</h3>
+                        <table class="product__table">
+                            <tr>
+                                <td class="product__name">
+                                    Масса
+                                </td>
+                                <td class="product__value">
+                                    1000 г
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Вкус
+                                </td>
+                                <td class="product__value">
+                                    Курица
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Цена
+                                </td>
+                                <td class="product__value">
+                                    1000 Р
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="goods__item goods__wrapper">
+                <div class="product">
+                    <img src="img/goods/catalog-3-mobile.png" width="68" height="78"
+                         alt="Cat Energy PRO со вкусом рыбы 500 г">
+                    <div class="product">
+                        <h3 class="product__heading">Cat Energy PRO 500 г</h3>
+                        <table class="product__table">
+                            <tr>
+                                <td class="product__name">
+                                    Масса
+                                </td>
+                                <td class="product__value">
+                                    500 г
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Вкус
+                                </td>
+                                <td class="product__value">
+                                    Рыба
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Цена
+                                </td>
+                                <td class="product__value">
+                                    700 Р
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="goods__item goods__wrapper">
+                <div class="product">
+                    <img src="img/goods/catalog-4-mobile.png" width="84" height="101"
+                         alt="Cat Energy PRO со вкусом рыбы 1000 г">
+                    <div class="product">
+                        <h3 class="product__heading">Cat Energy PRO 1000 г</h3>
+                        <table class="product__table">
+                            <tr>
+                                <td class="product__name">
+                                    Масса
+                                </td>
+                                <td class="product__value">
+                                    1000 г
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Вкус
+                                </td>
+                                <td class="product__value">
+                                    Рыба
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Цена
+                                </td>
+                                <td class="product__value">
+                                    1000 Р
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="goods__item goods__wrapper">
+                <div class="product">
+                    <img src="img/goods/catalog-5-mobile.png" width="68" height="78"
+                         alt="Cat Energy SLIM со вкусом гречки 500 г">
+                    <div class="product">
+                        <h3 class="product__heading">Cat Energy SLIM 500 г</h3>
+                        <table class="product__table">
+                            <tr>
+                                <td class="product__name">
+                                    Масса
+                                </td>
+                                <td class="product__value">
+                                    500 г
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Вкус
+                                </td>
+                                <td class="product__value">
+                                    Гречка
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Цена
+                                </td>
+                                <td class="product__value">
+                                    400 Р
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="goods__item goods__wrapper">
+                <div class="product">
+                    <img src="img/goods/catalog-6-mobile.png" width="84" height="100"
+                         alt="Cat Energy SLIM со вкусом гречки 1000 г">
+                    <div class="product">
+                        <h3 class="product__heading">Cat Energy SLIM 1000 г</h3>
+                        <table class="product__table">
+                            <tr>
+                                <td class="product__name">
+                                    Масса
+                                </td>
+                                <td class="product__value">
+                                    1000 г
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Вкус
+                                </td>
+                                <td class="product__value">
+                                    Гречка
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Цена
+                                </td>
+                                <td class="product__value">
+                                    700 Р
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="goods__item goods__wrapper">
+                <div class="product">
+                    <img src="img/goods/catalog-7-mobile.png" width="72" height="84"
+                         alt="Cat Energy SLIM со вкусом риса 1000 г">
+                    <div class="product">
+                        <h3 class="product__heading">Cat Energy SLIM 500 г</h3>
+                        <table class="product__table">
+                            <tr>
+                                <td class="product__name">
+                                    Масса
+                                </td>
+                                <td class="product__value">
+                                    500 г
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Вкус
+                                </td>
+                                <td class="product__value">
+                                    Рис
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="product__name">
+                                    Цена
+                                </td>
+                                <td class="product__value">
+                                    500 Р
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="goods__item goods__wrapper">
+                <div class="show-more show-more__wrapper">
+                    <div class="show-more__intro">
+                        <p class="show-more__description">Показать еще 100500 товаров</p>
+                        <p class="show-more__text">На самом деле вкусов гораздо больше!</p>
+                    </div>
+                    <a class="button button--disabled" href="#">Показать все</a>
+                </div>
+            </li>
+        </ul>
+    </section>
+</main>
+
 </body>
 </html>
