Разметка раздела со списком доп. товаров

--- a/sourse/catalog.html
+++ b/sourse/catalog.html
@@ -306,6 +306,60 @@
             </li>
         </ul>
     </section>
+
+    <section class="page-main__section additional-goods">
+        <h2 class="additional-goods__heading">Дополнительные товары</h2>
+        <ul class="additional-goods__list additional-goods__wrapper">
+            <li class="additional-goods__item">
+                <div class="additional-product">
+                    <h3 class="additional-product__heading">Сахарозаменитель</h3>
+                    <table class="additional-product__table">
+                        <tr>
+                            <td class="additional-product__description">1 упаковка (100 г)</td>
+                            <td class="additional-product__cost">200 Р</td>
+                        </tr>
+                    </table>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="additional-goods__item">
+                <div class="additional-product">
+                    <h3 class="additional-product__heading">Питьевая вода</h3>
+                    <table class="additional-product__table">
+                        <tr>
+                            <td class="additional-product__description">5 литров</td>
+                            <td class="additional-product__cost">50 Р</td>
+                        </tr>
+                    </table>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="additional-goods__item">
+                <div class="additional-product">
+                    <h3 class="additional-product__heading">Молоко</h3>
+                    <table class="additional-product__table">
+                        <tr>
+                            <td class="additional-product__description">1 литр</td>
+                            <td class="additional-product__cost">100 Р</td>
+                        </tr>
+                    </table>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+            <li class="additional-goods__item">
+                <div class="additional-product">
+                    <h3 class="additional-product__heading">Витамины</h3>
+                    <table class="additional-product__table">
+                        <tr>
+                            <td class="additional-product__description">1 упаковка (30 г)</td>
+                            <td class="additional-product__cost">300 Р</td>
+                        </tr>
+                    </table>
+                    <a class="button" href="form.html">Заказать</a>
+                </div>
+            </li>
+        </ul>
+    </section>
 </main>
 
 </body>
