Разметка раздела с акцией

--- a/sourse/catalog.html
+++ b/sourse/catalog.html
@@ -360,6 +360,12 @@
             </li>
         </ul>
     </section>
+
+    <section class="page-main__section promo">
+        <img src="img/promo-mobile.png" width="279" height="289"
+             alt="Фотография акционного товара - чехол для кота">
+        <p class="promo__text">Закажите все и получите чехол для кота в подарок!</p>
+    </section>
 </main>
 
 </body>
