Добавила изображение и заголовок для секции с информацией об акции

--- a/sourse/catalog.html
+++ b/sourse/catalog.html
@@ -362,6 +362,7 @@
     </section>
 
     <section class="page-main__section promo">
+        <h3>Действующие акции</h3>
         <img src="img/promo-mobile.png" width="279" height="289"
              alt="Фотография акционного товара - чехол для кота">
         <p class="promo__text">Закажите все и получите чехол для кота в подарок!</p>
