--- a/sourse/index.html
+++ b/sourse/index.html
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <footer  class="page-footer contacts">
+    <footer class="page-main__footer contacts">
       <h2 class="visually-hidden"> Контакты компании </h2>
       <p class="contacts__text">
         Приглашаем к сотрудничеству дилеров!
@@ -144,18 +144,18 @@
       <p class="contacts__address">
         ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
       </p>
-      <img src="img/map-mobile.png" width="640" height="724"
+      <img class="contacts__map" src="img/map-mobile.png" width="640" height="724"
            alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
     </footer>
 
   </main>
 
-  <footer class="page__footer footer">
-    <a class="footer__logo">
-      <img src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
+  <footer class="page__footer page-footer">
+    <a class="page-footer__logo logo">
+      <img class="logo__image" src="img/footer-logo.svg" width="128" height="24" alt="Cat energy">
     </a>
 
-    <ul class="footer__social social">
+    <ul class="page-footer__social social">
       <li class="social__item">
         <a class="social__link" href="#">
           <span class="visually-hidden">Вконтакте</span>
