--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CAT ENERGY: Функциональное питание для котов</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
   <header class="page-header">
