--- a/source/form.html
+++ b/source/form.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>CAT ENERGY: Подбор программы</title>
+  <meta charset="UTF-8">
+  <title>CAT ENERGY: Подбор программы</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="page__header page-header">
@@ -23,12 +24,12 @@
           </a>
         </li>
         <li class="site-menu__item ">
-          <a class="site-menu__link">
+          <a class="site-menu__link" href="catalog.html">
             Каталог продукции
           </a>
         </li>
         <li class="site-menu__item site-menu__item--current">
-          <a class="site-menu__link" href="form.html">
+          <a class="site-menu__link" href="#">
             Подбор программы
           </a>
         </li>
@@ -194,6 +195,12 @@
       </a>
     </li>
   </ul>
+
+  <a class="page-footer__developer developer" href="https://htmlacademy.ru/intensive/adaptive">
+    <span class="visually-hidden">Разработано в</span>
+    HTML Academy
+    <img class="developer__image" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="" aria-hidden="true">
+  </a>
 </footer>
 
 </body>
