--- a/source/index.html
+++ b/source/index.html
@@ -145,9 +145,11 @@
     <footer class="page-main__footer contacts">
       <h2 class="visually-hidden"> Контакты компании </h2>
 
-      <div class="contacts__container container">
-        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <div class="contacts__container">
+        <div class="contacts__preview container">
+          <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
 
         <img class="contacts__map" src="img/map-mobile.png" width="320" height="362"
              alt="Компания находится по адресу:улица Большая Конюшенная, дом 19/8, Санкт-Петербург">
