--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
-  <header class="page__header page-header">
+  <header class="page__header page-header container">
     <nav class="page-header__nav">
       <div class="page-header__bar">
         <a class="page-header__logo logo" >
@@ -20,7 +20,7 @@
         </button>
       </div>
 
-      <ul class="page-header__menu site-menu">
+      <ul class="page-header__menu site-menu site-menu--desktop-main">
         <li class="site-menu__item site-menu__item--current">
           <a class="site-menu__link">
             Главная
@@ -44,15 +44,17 @@
     <h1 class="visually-hidden"> Сайт магазина "Cat energy"</h1>
 
     <header class="page-main__header promo">
-      <div class="promo__container container">
-        <h1 class="promo__heading">Функциональное питание для котов</h1>
-        <p class="promo__text">Занялся собой? Займись котом!</p>
-        <img class="promo__image" src="img/index-can-mobile.png" width="280" height="270" alt="Изображение банки куриного корма cat energy">
-        <a class="promo__button button" href="./form.html">Подобрать программу</a>
+      <div class="container">
+        <div class="promo__container">
+          <h1 class="promo__heading">Функциональное питание для котов</h1>
+          <p class="promo__text">Занялся собой? Займись котом!</p>
+          <img class="promo__image" src="img/index-can-mobile.png" width="280" height="270" alt="Изображение банки куриного корма cat energy">
+          <a class="promo__button button" href="./form.html">Подобрать программу</a>
+        </div>
       </div>
     </header>
 
-    <section class="page-main__section catalog-sections">
+    <section class="page-main__section catalog-sections ">
       <div class="catalog-sections__container container">
         <h2 class="visually-hidden">Разделы каталога</h2>
 
