--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
         <h2 class="visually-hidden">Разделы каталога</h2>
 
         <article class="catalog-sections__item">
-          <h3 class="catalog-sections__heading">Похудение</h3>
+          <h3 class="catalog-sections__heading catalog-sections__heading--slim">Похудение</h3>
           <p class="catalog-sections__text">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -68,7 +68,7 @@
         </article>
 
         <article class="catalog-sections__item">
-          <h3 class="catalog-sections__heading">Набор массы</h3>
+          <h3 class="catalog-sections__heading catalog-sections__heading--pro">Набор массы</h3>
           <p class="catalog-sections__text">
             Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
