Стили для активных состояний ссылок и кнопок + откорректировала ссылки в разметке
 Шапки сайта и раздела каталог на главной странице

--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 <header class="page__header page-header">
   <nav class="page-header__nav">
     <div class="page-header__bar">
-      <a class="page-header__logo logo" >
+      <a class="page-header__logo logo" href="index.html">
         <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
         <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
       </a>
@@ -32,7 +32,7 @@
         </a>
       </li>
       <li class="site-menu__item  site-menu__item--current">
-        <a class="site-menu__link" href="#">
+        <a class="site-menu__link">
           Подбор программы
         </a>
       </li>
