--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
 <header class="page__header page-header">
   <nav class="page-header__nav">
     <div class="page-header__bar">
-      <a class="page-header__logo logo" >
+      <a class="page-header__logo logo" href="index.html">
         <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
         <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
       </a>
@@ -21,13 +21,13 @@
     </div>
 
     <ul class="page-header__menu site-menu">
-      <li class="site-menu__item site-menu__item--current">
+      <li class="site-menu__item ">
         <a class="site-menu__link" href="index.html">
           Главная
         </a>
       </li>
-      <li class="site-menu__item">
-        <a class="site-menu__link" href="#">
+      <li class="site-menu__item site-menu__item--current">
+        <a class="site-menu__link">
           Каталог продукции
         </a>
       </li>
