--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
             Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
-          <a class="catalog-sections__link" href="#">Каталог SLIM</a>
+          <a class="catalog-sections__link" href="catalog.html">Каталог SLIM</a>
         </article>
 
         <article class="catalog-sections__item">
@@ -73,7 +73,7 @@
             Заработать авторитет среди дворовых котов и даже собак?
             Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a class="catalog-sections__link" href="#">Каталог PRO</a>
+          <a class="catalog-sections__link" href="catalog.html">Каталог PRO</a>
         </article>
       </div>
     </section>
