Адаптив раздела "пример" (промежуточное)
Стилизация переключателя "было-стало"

--- a/source/index.html
+++ b/source/index.html
@@ -129,7 +129,10 @@
 
           </dl>
 
-          <p class="example__spending">Затраты на питание: 15 000 руб.</p>
+          <p class="example__spending">
+            <span>Затраты на питание:</span>
+            <span> 15 000 руб. </span>
+          </p>
 
         </div>
 
@@ -141,11 +144,11 @@
                  alt="Фотография кота после похудения">
           </div>
 
-          <div class="example__switcher switcher b">
+          <div class="example__switcher switcher switcher--before">
             <button class="switcher__button" type="button">Было</button>
             <div class="switcher__toggler "></div>
             <label class="switcher__bar">
-              <input  type="range" value="50" min="17" max="83">
+              <input class="switcher__range" type="range" value="50" min="17" max="83">
             </label>
             <button class="switcher__button" type="button">Стало</button>
           </div>
