Завершение адаптива для раздела "пример"

--- a/source/index.html
+++ b/source/index.html
@@ -138,10 +138,15 @@
 
         <div class="example__view">
           <div class="example__images">
-            <img class="example__image example__image--active" src="img/example/before-mobile.png" width="280" height="232"
-                 alt="Фотография кота до похудения">
-            <img class="example__image" src="img/example/after-mobile.png" width="243" height="232"
-                 alt="Фотография кота после похудения">
+            <div class="example__image example__image--active">
+              <img  src="img/example/before-mobile.png" width="280" height="232"
+                   alt="Фотография кота до похудения">
+            </div>
+            <div class="example__image example__image--after">
+              <img  src="img/example/after-mobile.png" width="243" height="232"
+                    alt="Фотография кота после похудения">
+            </div>
+
           </div>
 
           <div class="example__switcher switcher switcher--before">
