Откорректировала разметку навигации сайта на внутренних страницах сайта
Добавила классы для работы с js

подключила на страницу скрипт для открытия и закрытия навигации

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,20 +8,20 @@
 </head>
 <body class="page__body">
 <header class="page__header page-header">
-  <nav class="page-header__nav">
-    <div class="page-header__bar">
-      <a class="page-header__logo logo" href="index.html">
+  <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
+    <div class="main-nav__bar">
+      <a class="main-nav__logo logo" >
         <img class="logo__image" src="img/logo-mobile.svg" width="34" height="38" alt="Логотип магазина Cat energy">
         <img class="logo__sign" src="img/logo2-mobile.svg" width="101" height="18" alt="" aria-hidden="true">
       </a>
 
-      <button class="page-header__toggle" type="button">
+      <button class="main-nav__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
     </div>
 
-    <ul class="page-header__menu site-menu">
-      <li class="site-menu__item ">
+    <ul class="main-nav__menu site-menu">
+      <li class="site-menu__item">
         <a class="site-menu__link" href="index.html">
           Главная
         </a>
@@ -326,5 +326,6 @@
 
 </footer>
 
+<script src="./js/app.js"></script>
 </body>
 </html>
