--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-<header class="page__header page-header">
+<header class="page__header page-header container">
   <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
     <div class="main-nav__bar">
       <a class="main-nav__logo logo" >
