Стилизовала карточки с товаром для планшетной и десктопной версий сайта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -161,7 +161,7 @@
 
         <article class="catalog-list__item card">
           <a class="card__link">
-            <h3 class="card__heading">Cat Energy SLIM 1000 г</h3>
+            <h3 class="card__heading">Cat Energy SLIM 1000&nbsp;г</h3>
           </a>
 
           <img class="card__img" src="img/goods/catalog-6-mobile.png" width="84" height="100"
@@ -183,7 +183,7 @@
 
         <article class="catalog-list__item card">
           <a class="card__link">
-            <h3 class="card__heading">Cat Energy SLIM 500 г</h3>
+            <h3 class="card__heading">Cat Energy SLIM 500&nbsp;г</h3>
           </a>
 
           <img class="card__img" src="img/goods/catalog-7-mobile.png" width="72" height="84"
