Стилизация заголовка раздела с дополнительными товарами для всех версий сайта
Добавила декор

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -214,6 +214,7 @@
     </section>
 
     <section class="page-main__section catalog-additional">
+      <div class="catalog-additional__decor"></div>
       <div class="catalog-additional__container container">
         <h2 class="catalog-additional__heading">Дополнительные товары</h2>
         <ul class="catalog-additional__list">
