Стилизация раздела со специальным предложением для всех версий сайта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -272,8 +272,11 @@
         </ul>
 
         <div class="catalog-additional__promo offer">
-          <h3>Специальное предложение</h3>
-          <p class="offer__text">Закажите все и получите чехол для кота в подарок!</p>
+          <h3 class="visually-hidden">Специальное предложение</h3>
+          <div class="offer__icon">
+
+          </div>
+          <p class="offer__text">Закажите все <br> и получите чехол для кота в подарок!</p>
         </div>
       </div>
 
