Страница формы. Мобильная версия. Стилизация раздела с формой с информацией про кота, цель программы, чекпоинты для раздела с доп.товарами
Остались разделы с формой с контактными данными владельца и комментарий

--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,7 @@
   <header class="page-main__header container">
     <h1 class="page-main__heading">Подбор программы</h1>
     <p class="page-main__subheading">
-      Заполните анкету, и мы подберем программу питания для вашего кота
+      Заполните анкету, и мы подберем <br>  программу питания для вашего кота
     </p>
   </header>
 
@@ -70,7 +70,7 @@
               </li>
               <li class="field-group__item">
                 <label class="field">
-                  <span class="field__lead">Возраст</span>
+                  <span class="field__lead">Возраст (лет)</span>
                   <input class="field__input" name="cat-age" type="text" placeholder="7" required>
                 </label>
               </li>
@@ -83,7 +83,7 @@
             <ul class="field-group__list">
               <li class="field-group__item">
                 <label class="control control--radio">
-                  <input class="control__input" name="target" type="radio" value="fit">
+                  <input class="control__input" name="target" type="radio" value="fit" checked>
                   <span class="control__lead">Похудение</span>
                 </label>
               </li>
@@ -103,7 +103,7 @@
           </fieldset>
 
           <fieldset class="form__group form__group--contacts field-group">
-            <legend class="visually-hidden">Контактные данные (владельца кота)</legend>
+            <legend class="field-group__heading">Контактные данные (владельца кота)</legend>
 
             <ul class="field-group__list field-group__list--contacts">
               <li class="field-group__item">
