Откорректировала фоновый цвет для блока контактов
для главной страницы сделала модификатор с белым фоновым цветом;
откорректировала необходимые отступы согласно макету

--- a/source/index.html
+++ b/source/index.html
@@ -161,7 +161,7 @@
       </div>
     </section>
 
-    <footer class="page-main__footer contacts">
+    <footer class="page-main__footer contacts contacts--index">
       <h2 class="visually-hidden"> Контакты компании </h2>
 
       <div class="contacts__container container">
