Стилизация страницы с формой для планшетной и десктопной версий сайта

--- a/source/form.html
+++ b/source/form.html
@@ -40,8 +40,8 @@
   </nav>
 </header>
 
-<main class="page__main page-main">
-  <header class="page-main__header container">
+<main class="page__main page-main ">
+  <header class="page-main__header container container--form">
     <h1 class="page-main__heading">Подбор программы</h1>
     <p class="page-main__subheading">
       Заполните анкету, и мы подберем <br>  программу питания для вашего кота
@@ -51,7 +51,7 @@
     <section class="page-main__section form">
         <h2 class="visually-hidden">Форма анкеты</h2>
 
-        <form class="form__container container" method="post" action="https://echo.htmlacademy.ru">
+        <form class="form__container container container--form" method="post" action="https://echo.htmlacademy.ru">
           <fieldset class="form__group form__group--cat field-group">
             <legend class="visually-hidden">Данные кота</legend>
 
