Автоматизация создания спрайта c svg. Откорректировала разметку на всех страницах..Отредактировала расположение иконок в папке img. Копирование остальных файлов в папку build

--- a/source/form.html
+++ b/source/form.html
@@ -179,7 +179,6 @@
             <p class="form__additional">* — Обязательные поля</p>
           </div>
 
-
         </form>
     </section>
 
@@ -212,7 +211,7 @@
         <a class="social__link">
           <span class="visually-hidden">Вконтакте</span>
           <svg class="social__icon" width="23" height="16">
-            <use href="#icon-vk" ></use>
+            <use href="img/sprite.svg#icon-vk"></use>
           </svg>
         </a>
       </li>
@@ -220,7 +219,7 @@
         <a class="social__link">
           <span class="visually-hidden">Instagram</span>
           <svg class="social__icon" width="16" height="16" >
-            <use href="#icon-instagram"></use>
+            <use href="img/sprite.svg#icon-inst"></use>
           </svg>
         </a>
       </li>
@@ -228,7 +227,7 @@
         <a class="social__link">
           <span class="visually-hidden">Telegram</span>
           <svg class="social__icon" width="28" height="22">
-            <use href="#icon-telegram"></use>
+            <use href="img/sprite.svg#icon-tg"></use>
           </svg>
         </a>
       </li>
@@ -238,7 +237,7 @@
       <span class="visually-hidden">Разработано в</span>
       HTML Academy
       <svg class="developer__image" width="27" height="34">
-        <use href="#logo-academy"></use>
+        <use href="img/sprite.svg#icon-academy"></use>
       </svg>
     </a>
   </div>
