--- a/source/catalog.html
+++ b/source/catalog.html
@@ -343,7 +343,7 @@
         <a class="social__link">
           <span class="visually-hidden">Вконтакте</span>
           <svg class="social__icon" width="23" height="16">
-            <use href="#icon-vk" ></use>
+            <use href="img/sprite.svg#icon-vk"></use>
           </svg>
         </a>
       </li>
@@ -351,7 +351,7 @@
         <a class="social__link">
           <span class="visually-hidden">Instagram</span>
           <svg class="social__icon" width="16" height="16" >
-            <use href="#icon-instagram"></use>
+            <use href="img/sprite.svg#icon-inst"></use>
           </svg>
         </a>
       </li>
@@ -359,7 +359,7 @@
         <a class="social__link">
           <span class="visually-hidden">Telegram</span>
           <svg class="social__icon" width="28" height="22">
-            <use href="#icon-telegram"></use>
+            <use href="img/sprite.svg#icon-tg"></use>
           </svg>
         </a>
       </li>
@@ -369,7 +369,7 @@
       <span class="visually-hidden">Разработано в</span>
       HTML Academy
       <svg class="developer__image" width="27" height="34">
-        <use href="#logo-academy"></use>
+        <use href="img/sprite.svg#icon-academy"></use>
       </svg>
     </a>
   </div>
