--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
 <header class="page__header page-header container">
   <nav class="page-header__nav main-nav main-nav--closed main-nav--nojs">
     <div class="main-nav__bar">
-      <a class="main-nav__logo logo" >
+      <a class="main-nav__logo logo" href="index.html">
         <picture>
           <source media="(min-width: 1280px)" srcset="./img/logo-image-desktop.svg">
           <source media="(min-width: 767px)" srcset="./img/logo-image-tablet.svg">
